# axum_asgi_bridge

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
.plans/: README.md  roadmap.md
docs/: api.md  ci_release.md  index.md  middleware.md  observability.md  performance.md  production.md  progress.md  quickstart.md  roadmap.md
examples/: basic_fastapi.py  openapi_complete_fastapi.py  root_precedence_fastapi.py  utoipa_fastapi.py
python/axum_asgi_bridge/: __init__.py  asgi.py  exceptions.py  integrations.py  metrics.py
scripts/: build_wheels_local.sh  check.sh  serve_docs.sh
src/: bridge.rs  error.rs  lib.rs
tests/: dispatch_raw.rs
tests/python/: test_asgi_wrapper.py  test_exceptions.py  test_lifespan_stream_metrics.py  test_openapi_completeness.py  test_root_precedence.py  test_threadsafety.py
