[package]
name = "axum_asgi_bridge"
version = "0.1.0"
edition = "2024"
description = "Generic Axum to ASGI bridge with PyO3 bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stac-utils/axum_asgi_bridge"

[lib]
name = "axum_asgi_bridge"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
middleware = ["dep:tower-http"]
utoipa = ["dep:utoipa", "dep:utoipa-axum"]
observability = ["dep:tracing", "dep:tracing-subscriber", "middleware"]

[dependencies]
axum = "0.8"
futures-util = "0.3"
http-body-util = "0.1"
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio", "tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", optional = true, features = ["full"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
utoipa = { version = "5", optional = true }
utoipa-axum = { version = "0.2", optional = true }

[dev-dependencies]
http-body-util = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
